<resources>
    <string name="app_name">Just Us</string>
    <string name="welcome_app">Just Us💗</string>
    <string name="btn_miss_you">Mi manchi💗</string>
    <string name="user_name">Nome</string>
    <string name="login">Scopri l\'app</string>
    <string name="total_miss_you">Totale: 0</string>
    <string name="total_miss_you_count">Totale: %1$d</string>
    <string name="question_name">Come ti chiami?</string>
    <string name="btn_mood">Cambia il mio Mood</string>
    <string name="change_mood">Cambia il mio mood</string>
    <string name="custom_emoji">➕ Emoji Custom</string>
    <string name="emoji_quiet">😐</string>
    <string name="emoji_cool">😎</string>
    <string name="emoji_happy">😂</string>
    <string name="emoji_love">😍</string>
    <string name="emoji_sad">😢</string>
    <string name="emoji_partner_mood">😐</string>
    <string name="btn_bucket_list">Cose da Fare</string>
    <string name="bucket_list_title">Attività</string>
    <string name="bucket_list_add">Aggiungi cose fighe… </string>
    <string name="add_symbol">+</string>
    <string name="bucket_list_counter">Nessuna attività ancora…</string>
    <string name="btn_game">Minigioco (come la Claretta)</string>
    <string name="game_stats">Match perfetti: %1$d</string>
    <string name="game_question">Generando la domanda…</string>
    <string name="game_option_a">Partner 1</string>
    <string name="game_option_b">Partner 2</string>
    <string name="game_stats_title">Vittorie nei voti</string>
    <string name="btn_drive">Il nostro Diario</string>
    <string name="btn_edit">Modifica ✏️</string>
    <string name="btn_download">Scarica ⬇️</string>
    <string name="btn_delete">Elimina 🗑️</string>
    <string name="btn_play">⏯ Riproduci</string>
    <string name="btn_pause">Pausa</string>
    <string name="btn_play_audio">Play Audio</string>
    <string name="drive_write_text">Scrivi contenuto…</string>
    <string name="drive_add_text">➕ Aggiungi Testo</string>
    <string name="drive_add_file">📎 Aggiungi File</string>
    <string name="drive_listen_audio">▶ Tocca per ascoltare</string>
    <string name="drive_unknown_file">File Sconosciuto</string>
    <string name="password">Password\n</string>
    <string name="email">Email (opzionale)</string>
    <string name="username">Username</string>
    <string name="register">Registrati</string>
    <string name="question_register">Cosa ti porta qua?</string>
    <string name="btn_suggest_register">Non hai un account? Registrati</string>
    <string name="conferma_password">Conferma la Password\n</string>
    <string name="profile">Profilo</string>
    <string name="settings">Settings</string>
    <string name="edit_profile_bio">Modifica bio</string>
    <string name="change_password">Cambia password</string>
    <string name="profile_bio">Bio</string>
    <string name="new_password">Nuova password</string>
    <string name="edit_password">Cambia password</string>
    <string name="old_password">Password attuale</string>
    <string name="user_profile_photo">Immagine profilo dell’utente</string>
    <string name="profile_username">%1$s#%2$s</string>
    <string name="img_profile">img_profile</string>
    <string name="img_search_partner">img_search_partner</string>
    <string name="txt_search_partner">Partner</string>
    <string name="img_favorite_items">img_favorite_items</string>
    <string name="txt_favorite_items">Preferiti</string>
    <string name="partner_mood_label">Il mood di %1$s:</string>
    <string name="loading_spinner">loading_spinner</string>
    <string name="loading">Caricamento…</string>
    <string name="partner_profile_photo">partner_profile_photo</string>
    <string name="my_code_text">Il tuo codice: %1$s\nCondividilo solo con chi conosci!</string>
    <string name="user_code_text">%1$s • %2$s</string>
    <string name="change_profile_pic">Cambia foto Profilo</string>
    <string name="annulla">Annulla</string>
    <string name="conferma">Conferma</string>
    <string name="profile_photo">Foto profilo</string>
    <string name="username_code">Username • 1234</string>
    <string name="accept">Accetta</string>
    <string name="reject">Rifiuta</string>
    <string name="drive_item_thumbnail">thumbnail_item_grid\n</string>
    <string name="item_type">item_type</string>
    <string name="remind_partner">Remind Partner</string>
</resources>
