<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/bg_solid_dark"
    android:gravity="center_vertical"
    android:layout_marginBottom="8dp">

    <!-- Foto profilo -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/profile_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        app:shapeAppearanceOverlay="@style/CircleImage"
        android:background="@drawable/profile_image_bg"/>

    <!-- Username + codice -->
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/username_code"
        android:textSize="17sp"
        android:textColor="#FFEEFF" />

    <ImageButton
        android:id="@+id/btnAccept"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/accept"
        android:src="@drawable/ic_accept"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnReject"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/reject"
        android:src="@drawable/ic_reject"
        tools:ignore="TouchTargetSizeCheck" />
</LinearLayout>
