<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@drawable/bg_gradient">

    <!-- Titolo per username -->
    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <!-- Campo username -->
    <EditText
        android:id="@+id/usernameInput"
        style="@style/AppEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/user_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Campo password -->
    <EditText
        android:id="@+id/passwordInput"
        style="@style/AppEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_bg"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Bottone login -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:stateListAnimator="@null"
        app:backgroundTint="@null"
        android:background="@drawable/btn_gradient"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="243dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_suggest_register_gradient"
        android:backgroundTint="@null"
        android:stateListAnimator="@null"
        android:text="@string/btn_suggest_register"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@null" />
</LinearLayout>
